--- a/style.css
+++ b/style.css
@@ -1,16 +1,59 @@
 body{
+    margin: 0;
     font-family: 'Roboto', ;
 }
 h1{
     font-size: 50px;
 }
-.font-heighlit{
+.orange-heighlit{
     color: orange;
 }
 .half-width{
-    width: 50%;
+    width: 40%;
     float: left;
+    margin-left: 3%;
+    padding-left: 2%;
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.link-button{
+    text-decoration: none;
+    background-color: tomato;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+
+.dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.experence{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+}
+.Experence{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+#full-stack{
+    border-left: 10px black;
+    
+}
+#baby-web{
+    border-left: burlywood;
 }
